static/stylesheets/live.css
/* ... */
.content-header h1 {
  margin-left: 20px;
  text-transform: uppercase;
  color: #fece2f;
}

.schedule .content-header h1 {
  text-align: left;
}

.right-header-group {
  height: 100%;
  margin-right: 20px;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-end;
  align-items: center;
}

.content-box {
  background-color: rgba(0,0,0,0.4);
  border-radius: 20px;
}

@media only screen and (max-width: 850px){
  .live-container{
    width: calc(100% - 20px);
    margin: 0 10px;

    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
  }

  .content-box{
    width: calc(100vw - 50px) !important;
  }

  .content-box:first-child {
    margin-bottom: 50px;
  }
}

@media only screen and (max-width: 700px){
  #logo{
    height: auto;
    width: 90px;
  }
}

@media only screen and (max-width: 550px){
  .live-header {
    height: 150px;
  }
  .header {
    height: 90px;
  }
  #logo{
    height: auto;
    width: 60px;
  }
}

/* ========== Schedule ========== */

.schedule {
  width: calc(100vw - 475px);
  height: calc(100vh - 280px);

  overflow: hidden;
}

.schedule-legend {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;

  border: 2px #0093B1 solid;
  margin: 15px 10px 5px;
}

.schedule-legend>h2 {
  color: white;
  margin: 0 0 4px 0;
  padding-bottom: 4px;
  border-bottom: 2px solid #0093B1;
  background-color: #0093B1;
  font-weight: 400;
  font-size: 12pt;
  width: 100%;
  text-align: center;
}

.schedule-categories {
  width: 100%;
  padding: 5px;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.schedule-categories *{
  margin: 0;
  font-weight: 400;
  font-size: 12pt;
}

.schedule-container {
  max-height: calc(100% - 80px);
  width: 100%;

  padding: 5px 35px 5px 25px;

  overflow-y: auto;
  overflow-x: hidden;
}

.time-markers{
  width: 100%;

  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.time-stamps {
  margin-top: 11px;
  float: left;
  text-align: right;
  flex-shrink: 0;
  min-width: 75px;
}

.time-stamps p {
  margin: 0;
  padding: 0;
  height: 40px;
  font-variant: small-caps;
  color: white;
}

.time-stamps p:nth-child(odd){
  border-top: 4px solid transparent;
}

.time-stamps p:nth-child(even){
  border-top: 2px solid transparent;
}

.time-lines {
  margin-top: 25px;
  margin-left: 15px;
  width: 100%;
}

.time-lines div {
  width: 100%;
  height: 40px;
}

.time-lines div:nth-child(odd){
  border-top: 2px solid whitesmoke;
}

.time-lines div:nth-child(even){
  border-top: 1px solid whitesmoke;
}

.live-section {
  -webkit-backdrop-filter: blur(50px);
}

.events {
  position: relative;
}

.event {
  position: absolute;
  float: left;
  border: 3px solid black;
  border-radius: 5px;
  padding: 6px;
  background-color: rgba(0, 0, 0, 0.6);
  opacity: 0.95;
  overflow: hidden;
  height: 0;
  transition: all 0.3s linear;
  z-index: 5;
}

.event:hover {
  width: auto;
  height: auto;
  opacity: 1;
  box-shadow: 0 2px 2px 1px rgba(200, 200, 200, 0.40);
  transition: height 0.3s linear, width 0.3s linear, min-width 0.3s linear, left 0.2s linear 0.1s, opacity 0.2s;
  z-index: 10;
}

.event-dimmed {
  opacity: 0.3;
  transition: opacity 0.3s;
}

.event-title {
  display: flex;
  justify-content: space-between;
  padding-bottom: 4px;
}

.event .category-identifier {
  text-transform: uppercase;
  line-height: 1.1;
}

.shiftLeft {
  left: 100px !important;
}

.event h2 {
  color: white;
  margin: 0;
  font-size: 12pt;
}

.event h3 {
  margin: 0;
  padding-bottom: 4px;
  font-size: 16px;
}

.event p {
  color: white !important;
}

.event.category-0 {
  border-color: rgb(0, 188, 212);
}
.event.category-1 {
  border-color: rgb(247, 139, 49);
}
.event.category-2 {
  border-color: #ff357d;
}
.event.category-3 {
  border-color: rgb(168, 110, 219);
}
.event.category-4 {
  border-color: rgb(255, 0, 0);
}

.event.category-0 .category-identifier {
  color: rgb(0, 188, 212);
}

.event.category-1 .category-identifier {
  color: rgb(247, 139, 49);
}

.event.category-2 .category-identifier {
  color: #ff357d;
}

.event.category-3 .category-identifier {
  color: rgb(168, 110, 219);
}

.event.category-4 .category-identifier {
  color: rgb(255, 0, 0);
}

.event.category-0 * {
  border-color: rgb(0, 188, 212);
}
.event.category-1 * {
  border-color: rgb(247, 139, 49);
}
.event.category-2 * {
  border-color: rgb(255, 202, 11);
}
.event.category-3 * {
  border-color: rgb(168, 110, 219);
}
.event.category-4 * {
  border-color: rgb(255, 0, 0);
}

.schedule-categories *.category-0{
  color: rgb(0, 188, 212);
}
.schedule-categories *.category-1{
  color: rgb(247, 139, 49);
}
.schedule-categories *.category-2{
  color: rgb(255, 202, 11);
}
.schedule-categories *.category-3{
  color: rgb(168, 110, 219);
}
.schedule-categories *.category-4{
  color: rgb(255, 0, 0);
}

@media only screen and (max-width: 850px){
  .schedule{
    height: 600px;
    margin-right: 0;
  }
}

@media only screen and (max-width: 400px){
  .schedule-container {
    max-height: calc(100% - 160px);
  }
}

/* ========== Announcements ========== */

.announcements {
  width: 300px;
  height: calc(100vh - 280px);

  overflow-y: hidden;
}

#refreshAnnouncements {
  color: #fecd2f;
  cursor: pointer;
}

.announcements-container {
  max-height: calc(100% - 80px);
  overflow-y: auto;
}

.announcements-legend {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
  align-items: center;

  border: 2px #0093B1 solid;
  margin: 15px 10px 5px;
}

.announcements-legend>h2 {
  color: white;
  margin: 0 0 4px 0;
  padding-bottom: 4px;
  border-bottom: 2px solid #0093B1;
  background-color: #0093B1;
  font-weight: 400;
  font-size: 12pt;
  width: 100%;
  text-align: center;
}
/* ... */

